# todoist

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: task_data_create.py  test_api.py
todoist_api_app/: chart.drawio  chart_copy.drawio  chart_xml.py  classes.py  muuttujat.txt  parsing.py  subtask_creator.py  subtasks_data copy.csv  task_data copy.csv  task_data.csv  testi.py  todoist.py
todoist_api_app/data/: issues_argorithm.csv  issues_olio.csv  subtasks_data_fys1.csv  tasks_algorithm.csv  tasks_data_fys1.csv  tasks_olio.csv  tasks_wuip.csv  test_task.csv  wuip_exercises.csv
